# roster-team

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt  snowflake.yml  streamlit_app.py
.claude/skills/roster/: SKILL.md
.github/ISSUE_TEMPLATE/: monthly-build-issue.md
.streamlit/: config.toml  secrets.toml.example
core/: config.py  lookups.py  refs.py  role_rules.py
data/: job_title_classification.csv
docs/: DEPLOYMENT.md
scripts/: seed_z2_cache.py  setup_snowflake.py  smoke_test.py
services/: basis.py  corrections.py  export_xlsx.py  job_titles.py  playvox.py  roster_builder.py  workday_file.py  workday_snowflake.py  zendesk_names.py
ui/: components.py
