[project]
name = "roster-team"
version = "0.1.0"
description = "Monthly Team Roster automation — Snowflake-sourced Workday data + Playvox roles, exported as a Google-Sheets-ready .xlsx"
requires-python = ">= 3.11"

dependencies = []
# All runtime deps (streamlit, snowflake-snowpark-python, pandas, openpyxl)
# are pre-installed in the SiS container runtime from the Snowflake Anaconda
# channel — declaring them here triggers a PyPI fetch which fails without EAI.


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "ui*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "venv", "*.egg-info", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "ui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
